--- a/history.html
+++ b/history.html
@@ -23,6 +23,8 @@
         <nav class="topNav">
           <a class="navItem" href="./staff_handoff.html">受け渡し</a>
           <a class="navItem active" href="./history.html">履歴</a>
+          <a class="navItem" href="./sales.html">売上</a>
+          <a class="navItem" href="./owner.html">設定</a>
         </nav>
       </div>
     </div>
@@ -64,5 +66,6 @@
   <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
 
