--- a/sales.html
+++ b/sales.html
@@ -1,145 +1,108 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <link rel="stylesheet" href="./ui_dark.css?v=1">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>売上集計</title>
 
-  <style>
-    body{font-family:system-ui,-apple-system,"Segoe UI",sans-serif;margin:14px;}
-    header{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;}
-    nav a{margin-right:10px;text-decoration:none;}
-
-    .wrap{max-width:900px;}
-    .cal-wrap{max-width:560px;}
-    .cal-head{display:flex;justify-content:space-between;align-items:center;margin:10px 0;}
-    .cal-head button{padding:6px 12px;cursor:pointer;border-radius:10px;border:1px solid #bbb;background:#fff;}
-    .cal-title{font-weight:900;font-size:18px;}
-
-    .legend{display:flex;gap:12px;align-items:center;flex-wrap:wrap;font-size:12px;opacity:.9;margin:6px 0 10px;}
-    .lg{display:flex;gap:6px;align-items:center;}
-    .sw{width:14px;height:14px;border-radius:4px;border:1px solid #aaa;background:#fff;}
-    .sw.has{background:#ffe8c7;border-color:#f59e0b;}
-    .sw.sel{background:#c7ffd6;border-color:#24b24a;}
-    .sw.off{background:#f3f3f3;border-color:#ddd;}
-
-    .cal-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:6px;}
-    .dow{font-size:12px;opacity:.7;text-align:center;}
-
-    .day{
-      height:52px;border:1px solid #ddd;border-radius:12px;
-      display:flex;align-items:center;justify-content:center;
-      cursor:pointer; user-select:none;
-      background:#fff;
-      position:relative;
-      font-weight:700;
-    }
-    .day.off{opacity:.45;cursor:default;background:#f3f3f3;}
-    .day.has{background:#ffe8c7;border-color:#f59e0b;border-width:2px;}
-    .day.sel{background:#c7ffd6;border-color:#24b24a;border-width:2px;}
-    .dot{
-      position:absolute; bottom:6px;
-      width:8px;height:8px;border-radius:50%;
-      background:#f59e0b;
-    }
-    .day.sel .dot{ background:#16a34a; }
-
-    .picked{font-size:12px;opacity:.85;margin-top:4px;}
-    .msg{color:#c00;margin:8px 0;}
-
-    .cards{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;}
-    .card{
-      border:1px solid #ddd;border-radius:14px;padding:10px;background:#fff;
-      min-width:180px;
-    }
-    .k{font-size:12px;opacity:.75;}
-    .v{font-size:22px;font-weight:900;margin-top:4px;}
-
-    .box{margin-top:14px;border:1px solid #ddd;border-radius:14px;padding:10px;background:#fff;}
-    .row{display:flex;justify-content:space-between;gap:10px;align-items:center;padding:6px 0;border-bottom:1px dashed #eee;}
-    .row:last-child{border-bottom:none;}
-    .sub{font-size:12px;opacity:.75;}
-  </style>
+  <!-- ✅ 統一CSS（キャッシュバスター） -->
+  <link rel="stylesheet" href="./ui.css?v=20251214-1">
 
   <script>
     window.GAS_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzeeGTJKZXHsVEw8DMz_QahMsnbqAUzDM3D_9mnv1LpVRxIitpL0F3xlCTwKUjV0OURzQ/exec";
   </script>
 </head>
+
 <body>
-  <header>
-    <h2>売上集計</h2>
-    <nav>
-      <a href="./staff_handoff.html">受け渡し</a>
-      <a href="./history.html">履歴</a>
-      <a href="./sales.html">売上</a>
-    </nav>
+  <header class="appHeader">
+    <div class="wrap">
+      <div class="headRow">
+        <div class="brandTitle">SALES</div>
+        <nav class="topNav">
+          <a class="navItem" href="./staff_handoff.html">受け渡し</a>
+          <a class="navItem" href="./history.html">履歴</a>
+          <a class="navItem active" href="./sales.html">売上</a>
+          <a class="navItem" href="./owner.html">設定</a>
+        </nav>
+      </div>
+    </div>
   </header>
 
-  <div class="wrap">
-    <div class="cal-wrap">
-      <div class="cal-head">
-        <button id="prevMonth">←</button>
-        <div class="cal-title" id="calTitle"></div>
-        <button id="nextMonth">→</button>
-      </div>
+  <main class="wrap">
+    <div class="grid">
 
-      <div class="legend">
-        <div class="lg"><span class="sw has"></span>売上あり</div>
-        <div class="lg"><span class="sw sel"></span>選択中</div>
-        <div class="lg"><span class="sw off"></span>月外</div>
-      </div>
+      <section class="card salesCalCard cal-wrap">
+        <div class="salesCalHead cal-head">
+          <button class="btn" id="prevMonth">←</button>
+          <div class="salesCalTitle cal-title" id="calTitle"></div>
+          <button class="btn" id="nextMonth">→</button>
+        </div>
 
-      <div class="cal-grid" id="calDow"></div>
-      <div class="cal-grid" id="calGrid"></div>
+        <div class="salesLegend legend">
+          <div class="lg"><span class="sw has"></span>売上あり</div>
+          <div class="lg"><span class="sw sel"></span>選択中</div>
+          <div class="lg"><span class="sw off"></span>月外</div>
+        </div>
 
-      <div class="picked" id="pickedLabel"></div>
-      <div class="msg" id="msg"></div>
+        <!-- ✅ sales.js がここに描画 -->
+        <div class="cal-grid" id="calDow"></div>
+        <div class="cal-grid" id="calGrid"></div>
+
+        <div class="picked" id="pickedLabel"></div>
+        <div class="msg" id="msg"></div>
+      </section>
+
+      <section class="card salesRangeCard box">
+        <div class="sectionTitle" style="margin:0 0 10px;">期間集計</div>
+
+        <div class="salesRangeRow">
+          <button class="btn" id="btnThisWeek">今週</button>
+          <button class="btn" id="btnThisMonth">今月</button>
+
+          <div class="salesDateBox">
+            <div class="muted">From</div>
+            <input id="rangeFrom" type="date">
+          </div>
+          <div class="salesDateBox">
+            <div class="muted">To</div>
+            <input id="rangeTo" type="date">
+          </div>
+
+          <button class="btn" id="btnApplyRange">この期間で集計</button>
+        </div>
+
+        <div class="salesRangeRow" style="margin-top:10px;">
+          <span class="salesLabel">ランキング並び：</span>
+          <button class="btn" id="sortBySales">売上順</button>
+          <button class="btn" id="sortByQty">数量順</button>
+          <button class="btn" id="btnCopyTSV">CSV出力（Sheets貼付）</button>
+        </div>
+
+        <div id="rangeSummary" style="margin-top:10px;"></div>
+        <div id="rangeRanking" style="margin-top:10px;"></div>
+      </section>
+
+      <section id="cards" class="salesCards cards"></section>
+
+      <section class="card box">
+        <div class="sectionTitle" style="margin:0 0 6px;">商品別内訳</div>
+        <div class="sub">数量 / 売上（上位から表示）</div>
+        <div id="breakdown"></div>
+      </section>
+
     </div>
+  </main>
 
-    <div class="box" style="margin-top:14px;">
-  <div style="font-weight:900;margin-bottom:8px;">期間集計</div>
+  <!-- ✅ sales.js（キャッシュバスター＋読み込み確認） -->
+  <script src="./sales.js?v=20251214-1"></script>
+  <script>
+    console.log("[sales] html loaded", new Date().toISOString());
+    document.body.insertAdjacentHTML("beforeend",
+      "<div style='position:fixed;right:10px;bottom:10px;z-index:9999;background:rgba(0,0,0,.55);color:#fff;padding:6px 8px;border-radius:10px;font-size:12px;'>sales v20251214-1</div>"
+    );
+  </script>
 
-  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:end;">
-    <button id="btnThisWeek">今週</button>
-    <button id="btnThisMonth">今月</button>
-
-    <div>
-      <div class="sub">From</div>
-      <input id="rangeFrom" type="date">
-    </div>
-    <div>
-      <div class="sub">To</div>
-      <input id="rangeTo" type="date">
-    </div>
-    <button id="btnApplyRange">この期間で集計</button>
-  </div>
-
-  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:10px;">
-    <span style="font-weight:800;">ランキング並び：</span>
-    <button id="sortBySales">売上順</button>
-    <button id="sortByQty">数量順</button>
-    <button id="btnCopyTSV">CSV出力（Sheets貼付）</button>
-  </div>
-
-  <div id="rangeSummary" style="margin-top:10px;"></div>
-  <div id="rangeRanking" style="margin-top:10px;"></div>
-</div>
-
-    <div class="cards" id="cards"></div>
-
-    <div class="box">
-      <div style="font-weight:900;margin-bottom:6px;">商品別内訳</div>
-      <div class="sub">数量 / 売上（上位から表示）</div>
-      <div id="breakdown"></div>
-    </div>
-  </div>
-
-  <script src="./sales.js"></script>
-  <script>document.body.insertAdjacentHTML("beforeend","<div style='opacity:.6;font-size:12px;margin-top:10px;'>sales.html loaded</div>");</script>
-  <script src="./ui.js?v=1"></script>
+  <!-- ui.js も統一CSS前提なら残す（キャッシュバスター） -->
+  <script src="./ui.js?v=20251214-1"></script>
 </body>
 </html>
-
-
-
