--- a/owner.html
+++ b/owner.html
@@ -48,6 +48,10 @@
       border-radius:14px;
       font-weight:1000;
     }
+    /* ===== owner：販売中テキストは黒固定 ===== */
+.pill.off{
+  color:#111 !important;
+}
   </style>
 
   <script>
@@ -158,3 +162,4 @@
   <!-- ✅ ui.js は以前 SyntaxError が出ていたので owner では読み込まない（機能に不要） -->
 </body>
 </html>
+
