--- a/customer.html
+++ b/customer.html
@@ -99,7 +99,8 @@
   </script>
 
   <script src="./customer.js" defer></script>
-  <script src="./ui.js?v=1"></script>
+  <script src="./ui.js?v=1" defer></script>
 </body>
 </html>
+
 
